# biabot

./: .gitignore  README.md  pyproject.toml  sample.env
biabot/: __main__.py  chat.py  config.py  constants.py  documents.py  io.py  llm.py  patterns.py  persona.py  prompts.py
biabot/models/: base.py  conversation.py
biabot/nlp/: sparse.py  sparser.py
biabot/pipeline/: analyze.py  base.py  chore.py  factory.py  journal.py  report.py
documents/: AGI.md
export/: professor-001.jsonl
nlp/: model_eval.py
notebooks/: sparse.ipynb  test.ipynb
profiles/: Professor.json
